fix search bar alignment

--- a/site/_css/algolia.less
+++ b/site/_css/algolia.less
@@ -20,7 +20,7 @@
     border-radius: 15px;
     border: solid 1px fadeout(@dark-color, 80%);
     height: 30px;
-    margin-top: 9px;
+    margin-top: 10px;
     outline: none;
     padding: 0 10px 0 35px;
     width: 180px;
